fixed long project names squishing buttons

--- a/public/css/project.scss
+++ b/public/css/project.scss
@@ -19,8 +19,10 @@
         align-items: center;
         justify-content: space-between;
         gap: config.$gutter-quarter;
+
         .project-name {
             font-weight: bold;
+            flex: 1;
         }
     }
 
